--- a/Styles/Wrapper.css
+++ b/Styles/Wrapper.css
@@ -35,6 +35,7 @@ li {
 }
 
 button {
+  background-color: transparent;
 }
 
 * {
@@ -54,6 +55,7 @@ body {
 .wrapper {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
   min-height: 100vh;
 }
 
