--- a/Styles/Wrapper.css
+++ b/Styles/Wrapper.css
@@ -56,7 +56,7 @@ body {
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 [class*="__container"] {
