--- a/Common-styles/Header.css
+++ b/Common-styles/Header.css
@@ -1,24 +1,39 @@
 .top-header {
   color: #fff;
   background-color: #000;
-}
 
-.top-header__content {
-  display: flex;
-  align-items: center;
-  gap: 1.25rem;
-  min-height: 5.625rem;
-  padding: 0.625rem 0;
-}
+  .top-header__content {
+    display: flex;
+    align-items: center;
+    gap: 1.25rem;
+    min-height: 5.625rem;
+    padding: 0.625rem 0;
+  }
 
-.top-header__favourite,
-.top-header__cart {
-  position: relative;
-  z-index: 5;
-}
+  .top-header__favourite,
+  .top-header__cart {
+    position: relative;
+    z-index: 5;
+  }
 
-.top-header__menu {
-  flex: 1 1 auto;
+  .top-header__menu {
+    flex: 1 1 auto;
+  }
+
+  .top-header__user {
+    position: relative;
+    z-index: 5;
+    display: inline-flex;
+    align-items: center;
+    font-weight: 600;
+    padding-left: 2.1875rem;
+
+    &::before {
+      content: url("/Img/Incons/User.svg");
+      position: absolute;
+      left: 0;
+    }
+  }
 }
 
 .menu {
@@ -39,21 +54,6 @@
   line-height: 125%;
 }
 
-.top-header__user {
-  position: relative;
-  z-index: 5;
-  display: inline-flex;
-  align-items: center;
-  font-weight: 600;
-  padding-left: 2.1875rem;
-}
-
-.top-header__user::before {
-  content: url("/Img/Incons/User.svg");
-  position: absolute;
-  left: 0;
-}
-
 .icon-menu {
   display: none;
 }
@@ -62,17 +62,17 @@
 
 .body-header {
   background-color: #ecf1f2;
-}
 
-.body-header__content {
-  display: flex;
-  align-items: center;
-  min-height: 6.875rem;
-  padding: 0.625rem 0;
-}
+  .body-header__content {
+    display: flex;
+    align-items: center;
+    min-height: 6.875rem;
+    padding: 0.625rem 0;
+  }
 
-.body-header__search {
-  flex: 1 1 auto;
+  .body-header__search {
+    flex: 1 1 auto;
+  }
 }
 
 .search-header {
@@ -80,139 +80,145 @@
   border-radius: 3px;
   border: 1px solid rgba(4, 4, 4, 0.5);
   background-color: rgba(7, 7, 7, 0.03);
+
+  .search-header__button {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.5625rem;
+    width: 2.5625rem;
+    top: 0;
+    left: 0.5rem;
+    cursor: pointer;
+    color: rgba(0, 0, 0, 0.5);
+    background-color: transparent;
+
+    &::before {
+      position: absolute;
+      content: url("/Img/Incons/Search.svg");
+    }
+  }
+
+  .search-header__input {
+    height: 2.5625rem;
+    width: 100%;
+    color: #000;
+    background-color: transparent;
+    padding: 0 1.25rem 0 3.125rem;
+
+    &::placeholder {
+      color: rgba(0, 0, 0, 0.5);
+    }
+  }
 }
 
-.search-header__button {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 2.5625rem;
-  width: 2.5625rem;
-  top: 0;
-  left: 0.5rem;
-  cursor: pointer;
-  color: rgba(0, 0, 0, 0.5);
-  background-color: transparent;
+.actions-header {
+  .actions-header__phones {
+    position: relative;
+    z-index: 5;
+  }
+
+  .actions-header__content {
+    display: flex;
+    align-items: center;
+    column-gap: 30px;
+  }
+
+  .actions-header__location {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    font-weight: 600;
+
+    &::before {
+      content: url("/Img/Incons/Location.svg");
+      margin-right: 10px;
+    }
+  }
+
+  .actions-header__cart {
+    flex: 0 0 auto;
+  }
 }
 
-.search-header__button::before {
-  position: absolute;
-  content: url("/Img/Incons/Search.svg");
-}
+.phones-header {
+  .phones-header__item {
+    position: relative;
+    display: flex;
+  }
 
-.search-header__input {
-  height: 2.5625rem;
-  width: 100%;
-  color: #000;
-  background-color: transparent;
-  padding: 0 1.25rem 0 3.125rem;
-}
+  .phones-header__phone {
+    font-weight: 600;
+    white-space: nowrap;
+  }
 
-.search-header__input::placeholder {
-  color: rgba(0, 0, 0, 0.5);
-}
+  .phones-header__arrow {
+    position: relative;
+    cursor: pointer;
+    margin-left: 0.625rem;
+    padding: 0.625rem;
 
-/* BODY-HEADER (ACTIONS-HEADER) */
+    &::before,
+    &::after {
+      position: absolute;
+      content: "";
+      display: inline-block;
+      height: 0.125rem;
+      width: 0.75rem;
+      border-radius: 0.1875rem;
+      background-color: #e8aa31;
+      transition: all 0.3s ease-in-out;
+    }
 
-.actions-header__phones {
-  position: relative;
-  z-index: 5;
-}
+    &::before {
+      transform: rotate(-45deg);
+    }
 
-.actions-header__content {
-  display: flex;
-  align-items: center;
-  column-gap: 30px;
-}
+    &::after {
+      transform: rotate(45deg);
+      left: 0.1875rem;
+    }
+  }
 
-.actions-header__location {
-  position: relative;
-  display: inline-flex;
-  align-items: center;
-  font-weight: 600;
-}
+  .phones-header__arrow.active.phones-header__arrow::before {
+    transform: rotate(45deg);
+  }
 
-.actions-header__location::before {
-  content: url("/Img/Incons/Location.svg");
-  margin-right: 10px;
-}
+  .phones-header__arrow.active.phones-header__arrow::after {
+    transform: rotate(-45deg);
+  }
 
-.phones-header__item {
-  position: relative;
-  display: flex;
-}
+  .phones-header__list {
+    position: absolute;
+    z-index: 10;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    max-height: 0;
+    overflow: hidden;
+    border-radius: 0.625rem;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    transition: max-height 0.4s ease-in-out;
 
-.phones-header__phone {
-  font-weight: 600;
-  white-space: nowrap;
-}
+    &.show {
+      max-height: 500px;
+    }
 
-.phones-header__arrow {
-  position: relative;
-  cursor: pointer;
-  margin-left: 0.625rem;
-  padding: 0.625rem;
-}
+    & li {
+      padding: 0.625rem;
+    }
+  }
 
-.phones-header__arrow::before,
-.phones-header__arrow::after {
-  position: absolute;
-  content: "";
-  display: inline-block;
-  height: 0.125rem;
-  width: 0.75rem;
-  border-radius: 0.1875rem;
-  background-color: #e8aa31;
-  transition: all 0.3s ease-in-out;
-}
-
-.phones-header__arrow::before {
-  transform: rotate(-45deg);
-}
-
-.phones-header__arrow::after {
-  transform: rotate(45deg);
-  left: 0.1875rem;
-}
-
-.phones-header__arrow.active.phones-header__arrow::before {
-  transform: rotate(45deg);
-}
-
-.phones-header__arrow.active.phones-header__arrow::after {
-  transform: rotate(-45deg);
-}
-
-.phones-header__list {
-  position: absolute;
-  z-index: 10;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  max-height: 0;
-  overflow: hidden;
-  border-radius: 0.625rem;
-  background-color: #fff;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  transition: max-height 0.4s ease-in-out;
-}
-
-.phones-header__list.show {
-  max-height: 500px;
-}
-
-.phones-header__list li {
-  padding: 0.625rem;
-}
-
-.phones-header__callback {
-  font-family: inherit;
-  font-weight: 700;
-  font-size: inherit;
-  line-height: inherit;
-  cursor: pointer;
-  color: #e8aa31;
+  .phones-header__callback {
+    font-family: inherit;
+    font-weight: 700;
+    font-size: inherit;
+    line-height: inherit;
+    cursor: pointer;
+    color: #e8aa31;
+  }
 }
 
 .popup {
@@ -227,42 +233,38 @@
   transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.5);
   transition: height 0.3s ease-in-out;
-}
 
-.popup.popup_active {
-  height: 100%;
-}
+  .popup__content {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 300px;
+    border-radius: 15px;
+    background-color: #fff;
+    padding: 0.625rem;
+    margin: 25% auto;
+  }
 
-.popup__content {
-  display: none;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  max-width: 300px;
-  border-radius: 15px;
-  background-color: #fff;
-  padding: 0.625rem;
-  margin: 25% auto;
+  .popup__title {
+    font-weight: 700;
+    font-size: 2.25rem;
+    line-height: 128%;
+  }
+
+  .popup__text {
+    font-weight: 600;
+    font-size: 1.25rem;
+    line-height: 170%;
+  }
 }
 
 .popup.popup_active .popup__content {
   display: flex;
 }
 
-.popup__title {
-  font-weight: 700;
-  font-size: 2.25rem;
-  line-height: 128%;
-}
-
-.popup__text {
-  font-weight: 600;
-  font-size: 1.25rem;
-  line-height: 170%;
-}
-
-.actions-header__cart {
-  flex: 0 0 auto;
+.popup.popup_active {
+  height: 100%;
 }
 
 .cart-header {
@@ -270,6 +272,18 @@
   align-items: center;
   column-gap: 0.9375rem;
   line-height: 125%;
+
+  .cart-header__body {
+    font-size: 1rem;
+  }
+
+  .cart-header__sum:not(:last-child) {
+    margin-bottom: 0.3125em;
+  }
+
+  .cart-header__link {
+    color: #e8aa31;
+  }
 }
 
 .top-header__cart,
@@ -293,18 +307,6 @@
   background-color: #e8aa31;
 }
 
-.cart-header__body {
-  font-size: 1rem;
-}
-
-.cart-header__sum:not(:last-child) {
-  margin-bottom: 0.3125em;
-}
-
-.cart-header__link {
-  color: #e8aa31;
-}
-
 /* CATALOG-HEADER */
 
 .header__catalog {
@@ -316,65 +318,69 @@
   background-color: #000;
 }
 
-.menu-catalog__list {
-  display: flex;
-  gap: 10px;
-  justify-content: space-between;
+.menu-catalog {
+  .menu-catalog__list {
+    display: flex;
+    gap: 10px;
+    justify-content: space-between;
+  }
+
+  .menu-catalog__link {
+    position: relative;
+    display: inline-flex;
+    transition: color 0.3s ease-in-out;
+
+    &::after {
+      position: absolute;
+      opacity: 0;
+      visibility: hidden;
+      content: "";
+      left: 0.625rem;
+      bottom: 0;
+      width: 100%;
+      height: 1px;
+      background-color: #e8aa31;
+      transition: all 0.3s ease-in-out;
+    }
+  }
+
+  .menu-catalog__sub-menu {
+    width: 100%;
+    background-color: #000;
+  }
 }
 
-.menu-catalog__link {
-  position: relative;
-  display: inline-flex;
-  transition: color 0.3s ease-in-out;
-}
+.sub-menu-catalog {
+  .sub-menu-catalog__container {
+    padding: 0 0.625rem;
+  }
 
-.menu-catalog__link::after {
-  position: absolute;
-  opacity: 0;
-  visibility: hidden;
-  content: "";
-  left: 0.625rem;
-  bottom: 0;
-  width: 100%;
-  height: 1px;
-  background-color: #e8aa31;
-  transition: all 0.3s ease-in-out;
-}
+  .sub-menu-catalog__block {
+    display: none;
+  }
 
-.menu-catalog__sub-menu {
-  width: 100%;
-  background-color: #000;
-}
+  .sub-menu-catalog__list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 1.875rem 0.9375rem 1.875rem 0;
+    border-top: 1px solid rgba(255, 255, 255, 0.3);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  }
 
-.sub-menu-catalog__container {
-  padding: 0 0.625rem;
-}
+  .sub-menu-catalog__footer {
+    padding: 1.875rem 0.9375rem 1.875rem 0;
+  }
 
-.sub-menu-catalog__block {
-  display: none;
+  .sub-menu-catalog__all {
+    color: #e8aa31;
+  }
 }
 
 .sub-menu-catalog__block._sub-menu-open {
   display: grid;
   justify-content: start;
   grid-template-columns: repeat(5, minmax(auto, 20rem));
-}
-
-.sub-menu-catalog__list {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  padding: 1.875rem 0.9375rem 1.875rem 0;
-  border-top: 1px solid rgba(255, 255, 255, 0.3);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-}
-
-.sub-menu-catalog__footer {
-  padding: 1.875rem 0.9375rem 1.875rem 0;
-}
-
-.sub-menu-catalog__all {
-  color: #e8aa31;
 }
 
 /* MEDIA (PC) */
