--- a/Styles-index.html/Main-block.css
+++ b/Styles-index.html/Main-block.css
@@ -1,6 +1,3 @@
-.page {
-}
-
 .main-block {
   background-image: url(/Img/MainPage/Bg.jpg);
   background-size: cover;
@@ -16,7 +13,10 @@
 .main-block__body {
   display: grid;
   align-items: start;
-  grid-template-columns: 1fr 39.6875%;
+  row-gap: 2.5rem;
+  &:not(:last-child) {
+    margin-bottom: 2.7%;
+  }
 }
 
 .main-block__swiper {
@@ -29,17 +29,7 @@
   margin-bottom: 1.875rem;
 }
 
-.swiper-wrapper {
-}
-
-.swiper-slide {
-}
-
-.slide-main-block {
-}
-
 .slide-main-block__content {
-  padding-right: 2.5rem;
   &:not(:last-child) {
     margin-bottom: 6.3%;
   }
@@ -72,29 +62,6 @@
   color: rgba(255, 255, 255, 0.7);
 }
 
-.slide-main-block__button {
-}
-
-.button {
-  display: inline-flex;
-  font-weight: 600;
-  font-size: 1.25rem;
-  line-height: 160%;
-  border-radius: 3px;
-  background-color: #e8aa31;
-  box-shadow: 0px 4px 20px rgba(232, 170, 49, 0.43);
-  transition: all 0.3s ease 0s;
-  padding: 0.5rem 3.25rem;
-  &:hover {
-    color: #e8aa31;
-    background-color: #fff;
-    box-shadow: 0px 4px 20px rgba(232, 170, 49, 0.63);
-  }
-}
-
-.main-block__controll {
-}
-
 .controll-main-block {
   display: inline-grid;
   grid-auto-flow: column;
@@ -111,24 +78,9 @@
       cursor: pointer;
       height: 2.5rem;
       width: 1.125rem;
-      &::after {
-        content: "";
-        position: absolute;
-        top: 50%;
-        height: 0.125rem;
-        width: 100%;
-        background-color: #fff;
-        transition: all 0.3s ease 0s;
-        transform: translate(0px, -50%);
-        opacity: 1;
-        border-radius: 0;
-      }
-    }
-
-    .swiper-pagination-bullet-active {
-      position: relative;
-      width: 1.875rem;
-      background-color: #e8aa31;
+      transition: all 0.3s ease 0s;
+      background: transparent;
+      opacity: 1;
       &::before {
         content: "";
         position: absolute;
@@ -139,25 +91,49 @@
         border-radius: 50%;
         background-color: #e8aa31;
         transform: translate(0px, -50%);
+        opacity: 0;
+      }
+      &::after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        height: 0.125rem;
+        width: 100%;
+        background-color: #fff;
+        transform: translate(0px, -50%);
+        border-radius: 0;
       }
     }
-  }
 
-  .controll-main-block__fraction {
-    display: flex;
-    color: #fff;
+    .swiper-pagination-bullet-active {
+      width: 1.875rem;
+      background: transparent;
+      &::before {
+        opacity: 1;
+        left: 1.25rem;
+        transition: left 3s linear 0s;
+      }
+      &::after {
+        background-color: #e8aa31;
+      }
+    }
   }
 }
 
 .fraction-controll {
-  &__current {
+  display: flex;
+  align-items: flex-end;
+  letter-spacing: 0.2em;
+  color: #fff;
+  .fraction-controll__current {
+    font-weight: 600;
+    font-size: 1.5rem;
+    color: #e8aa31;
   }
 
-  &__all {
+  .fraction-controll__all {
+    font-weight: 600;
   }
-}
-
-.main-block__media {
 }
 
 .media-main-block {
@@ -175,14 +151,15 @@
   & img {
     position: relative;
     z-index: 2;
+    max-width: 100%;
   }
   &::before {
     content: "";
     position: absolute;
     right: 0;
     bottom: 4%;
-    width: 423px;
-    height: 423px;
+    width: 94.2%;
+    padding-bottom: 94.2%;
     border-radius: 50%;
     border: 2px solid rgba(255, 255, 255, 0.5);
     transform: translate(31%, 0px);
@@ -271,17 +248,64 @@
   transform: rotate(180deg);
 }
 
-.main-block__advantages {
-}
-
 .advantages-main {
+  display: grid;
+  justify-content: space-between;
+  gap: 0.625rem;
+  grid-template-columns: repeat(4, auto);
 }
 
 .advantages-main__item {
-}
-
-.advantages-main__icon {
+  display: inline-grid;
+  gap: 1.0625rem;
+  text-align: center;
+  max-width: 18.125rem;
+  grid-template-rows: 77px auto;
 }
 
 .advantages-main__text {
+  font-weight: 600;
+  font-size: 1.25rem;
+  line-height: 160%;
+}
+
+/* MEDIA (TABLET)*/
+
+@media (min-width: 1023px) {
+  .main-block__body {
+    grid-template-columns: 1fr 39.6875%;
+  }
+
+  .slide-main-block__content {
+    padding-right: 2.5rem;
+  }
+}
+
+@media (max-width: 1023px) {
+  .slide-main-block__title,
+  .slide-main-block__sub-title {
+    font-size: 1.375rem;
+  }
+
+  .slide-main-block__text {
+    font-size: 1rem;
+  }
+
+  .slide-main-block__button {
+    width: 100%;
+  }
+
+  .advantages-main {
+    row-gap: 1.875rem;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+  }
+}
+
+/* MEDIA (PHONE) */
+
+@media (max-width: 767px) {
+  .advantages-main {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
